# CataFile

./: .deepsource.toml  .gitignore  README.md  categorizer_magic.py  categorizer_mime.py  config.py  folders.py  logger.py  main.py  my_file.py  preferences.py  pyproject.toml  requirements.txt  test_folders.py  test_logger.py  ui.py
lib/: File.py  Folders.py  Logger.py  MyFile.py  preferences.py
lib/ponicode/: File_test.py
mime based-depricated/: categorizer_mime.py
project/: MyFile.py  Qt-uix.py  Qt.ui  config.py  folders.py  logger.py  main.py  my_file.py  preferences.py  test_ArchiveFile.py  test_font.py  test_my_file.py  tui.py  ui.py  ui.wxg~  wxglade_out.py
project/mime based-depricated/: categorizer_mime.py
project/test_cases/: LangMelody.odp  f1142105832.sxw  f1166630840.doc  f1424254168_What_Is_a_Portfolio.doc  f1556856032.pages  preferences.py
project/test_cases/dest/copy/: چک لیست‌ها.ods
project/trash/: logger (old).py  tui-not used.py  ui.wxg  wxglade_out.py~
test/: test_folders.py  test_logger.py  test_ui.py
test/test_files/: f114863040.doc  f426104312.epub
test_cases/test_folder/: f1559560368.apk  f785085640.doc  f90090736.odg  log۱۴۰۰-۱۱-۲۶-۰۹-۱۵-۳۰.txt
tests/: ponytests.py  preferences.py  test_DestinationFolder.py  test_archive_file.py  test_file.py  test_file_messed.py  test_folder.py  test_folders.py  test_font.py  test_logger.py  test_my_file.py  test_ui.py
tests/test_cases/: f1270380024_2Num.doc  preferences.py
trash/: Logger-konsole.py  Logger-loguru.py  Logger.py  konsole_test_logger.py  logger (old).py
(+2 files in other folders)
